--- a/expresso-core/pom.xml
+++ b/expresso-core/pom.xml
@@ -6,11 +6,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.diezam04</groupId>
+    <groupId>com.diezam04.expresso</groupId>
     <artifactId>expresso</artifactId>
-    <version>0.1.0</version>
+    <version>1.0.0</version>
   </parent>
-
   <artifactId>expresso-core</artifactId>
   <packaging>jar</packaging>
 
