--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -45,11 +45,18 @@ jobs:
           java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}" build --out output HelloWorld.Expresso --verbose
           java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}" run --out output HelloWorld.Expresso --verbose
 
-      - name: Upload JARs
+      - name: Upload Cli Jar
         uses: actions/upload-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
           path: "expresso-cli/target/${{ steps.pick.outputs.jar_name }}"
+          if-no-files-found: error
+
+      - name: Upload Rest Jar
+        uses: actions/upload-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
+          path: "expresso-rest/target/${{ steps.pick.outputs.jar_name }}"
           if-no-files-found: error
 
   cli-installer-deb:
@@ -175,6 +182,41 @@ jobs:
           path: dist/*.msi
           if-no-files-found: error
 
+  docker-image:
+    needs: Create-cli-Release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download built JAR
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
+
+      - name: Build Docker image
+        run: |
+          mkdir -p docker/artifact
+          mv "${{ env.APP_NAME }}-${{ env.VERSION }}.jar" docker/artifact/expresso.jar
+          docker build -t expressor:latest \
+            -f dockerfile \
+            docker
+      - name: Run Docker image (test)
+        run: |
+          docker run expressor:latest
+          wget -qO- http://localhost:8080/health
+
+      - name: upload Docker image to Docker Hub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./docker
+          file: ./docker/dockerfile
+          push: true
+          tags: antonyOviedo/expressor:latest
+        env:
+          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+          DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+
   Create-cli-Release:
     runs-on: ubuntu-latest
     needs:
@@ -253,4 +295,3 @@ jobs:
             ${{ env.APP_NAME }}-${{ env.VERSION }}.jar
             ${{ env.APP_NAME }}-${{ env.VERSION }}.deb
             ${{ env.APP_NAME }}-${{ env.VERSION }}.msi
-
