--- a/expresso-cli/pom.xml
+++ b/expresso-cli/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.diezam04</groupId>
+    <groupId>com.diezam04.expresso</groupId>
     <artifactId>expresso</artifactId>
     <version>0.1.0</version>
     <relativePath>../pom.xml</relativePath>
@@ -15,7 +15,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.diezam04</groupId>
+      <groupId>com.diezam04.expresso</groupId>
       <artifactId>expresso-core</artifactId>
       <version>0.1.0</version>
     </dependency>
