--- a/expresso-rest/pom.xml
+++ b/expresso-rest/pom.xml
@@ -1,15 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.diezam04.expresso</groupId>
-  <artifactId>expresso-rest</artifactId>
-  <version>1.0.0</version>
 
   <parent>
     <groupId>com.diezam04.expresso</groupId>
     <artifactId>expresso</artifactId>
-    <version>1.0.0</version>
+    <version>0.1.0</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
+
+  <artifactId>expresso-rest</artifactId>
+  <packaging>jar</packaging>
 
   <properties>
     <java.version>21</java.version> <!-- Puedes subirlo si tu toolchain lo soporta -->
@@ -37,7 +38,7 @@
   <dependency>
     <groupId>com.diezam04.expresso</groupId>
     <artifactId>expresso-core</artifactId>
-    <version>1.0.0</version>
+    <version>0.1.0</version>
   </dependency>
 </dependencies>
 
@@ -46,6 +47,7 @@
     <plugin>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-maven-plugin</artifactId>
+      <version>${spring.boot.version}</version>
       <executions>
         <execution>
           <goals><goal>repackage</goal></goals>
