--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -17,7 +17,8 @@ jobs:
   build-jar:
     runs-on: ubuntu-latest
     outputs:
-      jar_name: ${{ steps.pick.outputs.jar_name }}
+      cli_jar_name: ${{ steps.pick.outputs.cli_jar_name }}
+      rest_jar_name: ${{ steps.pick.outputs.rest_jar_name }}
     steps:
       - uses: actions/checkout@v4
 
@@ -31,32 +32,34 @@ jobs:
       - name: Build with Maven
         run: mvn -B -DskipTests package
 
-      - name: Pick main JAR
+      - name: Pick main cli and rest JAR
         id: pick
         shell: bash
-        run: echo "jar_name=$(basename $(ls expresso-cli/target/*.jar 2>/dev/null || ls expresso-cli/target/*.jar | head -n1))" >> "$GITHUB_OUTPUT"
+        run: |
+          echo "cli_jar_name=$(basename $(ls expresso-cli/target/*.jar 2>/dev/null || ls expresso-cli/target/*.jar | head -n1))" >> "$GITHUB_OUTPUT"
+          echo "rest_jar_name=$(basename $(ls expresso-rest/target/*.jar 2>/dev/null || ls expresso-rest/target/*.jar | head -n1))" >> "$GITHUB_OUTPUT"
 
       - name: Test JAR
         run: |
-          echo "Testing ${{ steps.pick.outputs.jar_name }}"
-          java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}"
-          java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}" --help
-          java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}" transpile --out output HelloWorld.Expresso --verbose
-          java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}" build --out output HelloWorld.Expresso --verbose
-          java -jar "expresso-cli/target/${{ steps.pick.outputs.jar_name }}" run --out output HelloWorld.Expresso --verbose
+          echo "Testing ${{ steps.pick.outputs.cli_jar_name }}"
+          java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}"
+          java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}" --help
+          java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}" transpile --out output HelloWorld.Expresso --verbose
+          java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}" build --out output HelloWorld.Expresso --verbose
+          java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}" run --out output HelloWorld.Expresso --verbose
 
       - name: Upload Cli Jar
         uses: actions/upload-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
-          path: "expresso-cli/target/${{ steps.pick.outputs.jar_name }}"
+          path: "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}"
           if-no-files-found: error
 
       - name: Upload Rest Jar
         uses: actions/upload-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          path: "expresso-rest/target/${{ steps.pick.outputs.jar_name }}"
+          path: "expresso-rest/target/${{ steps.pick.outputs.rest_jar_name }}"
           if-no-files-found: error
 
   cli-installer-deb:
@@ -112,7 +115,7 @@ jobs:
             --name "${APP_NAME}" \
             --linux-package-name "${APP_NAME}" \
             --input target \
-            --main-jar "${{ needs.build-jar.outputs.jar_name }}" \
+            --main-jar "${{ needs.build-jar.outputs.cli_jar_name }}" \
             --main-class "${MAIN_CLASS}" \
             --app-version "${VERSION}" \
             --linux-deb-maintainer "Expresso Team <antony-08@hotmail.com>" \
@@ -157,7 +160,7 @@ jobs:
             --type app-image `
             --name "$env:APP_NAME" `
             --input target `
-            --main-jar "${{ needs.build-jar.outputs.jar_name }}" `
+            --main-jar "${{ needs.build-jar.outputs.cli_jar_name }}" `
             --main-class "$env:MAIN_CLASS" `
             --win-console `
             --dest out
