--- a/expresso-rest/pom.xml
+++ b/expresso-rest/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -13,8 +14,8 @@
   <packaging>jar</packaging>
 
   <properties>
-    <java.version>21</java.version> <!-- Puedes subirlo si tu toolchain lo soporta -->
-    <spring.boot.version>3.3.2</spring.boot.version>
+    <!-- Boot 3.4.x sí soporta Java 24 -->
+    <spring.boot.version>3.4.3</spring.boot.version>
   </properties>
 
   <dependencyManagement>
@@ -29,31 +30,31 @@
     </dependencies>
   </dependencyManagement>
 
-<dependencies>
-  <dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-web</artifactId>
-  </dependency>
-
-  <dependency>
-    <groupId>com.diezam04.expresso</groupId>
-    <artifactId>expresso-core</artifactId>
-    <version>0.1.0</version>
-  </dependency>
-</dependencies>
-
-<build>
-  <plugins>
-    <plugin>
+  <dependencies>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-maven-plugin</artifactId>
-      <version>${spring.boot.version}</version>
-      <executions>
-        <execution>
-          <goals><goal>repackage</goal></goals>
-        </execution>
-      </executions>
-    </plugin>
-  </plugins>
-</build>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.diezam04.expresso</groupId>
+      <artifactId>expresso-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring.boot.version}</version>
+        <executions>
+          <execution>
+            <goals><goal>repackage</goal></goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
