--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,24 @@
   <version>0.1.0</version>
   <packaging>pom</packaging>
 
+  <properties>
+    <maven.compiler.release>24</maven.compiler.release>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
+        <configuration>
+          <release>${maven.compiler.release}</release>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <modules>
     <module>expresso-core</module>
     <module>expresso-cli</module>
