--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,4 +1,4 @@
-name: CI and CDelivery for the CLI app.
+name: CI and CDelivery for the CLI app
 
 on:
   push:
@@ -12,9 +12,9 @@ env:
 permissions:
   contents: write
   actions: write
-jobs:
 
- build-jar:
+jobs:
+  build-jar:
     runs-on: ubuntu-latest
     outputs:
       cli_jar_name: ${{ steps.pick.outputs.cli_jar_name }}
@@ -72,7 +72,6 @@ jobs:
       - name: Test JAR
         run: |
           echo "Testing ${{ steps.pick.outputs.cli_jar_name }}"
-          java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}"
           java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}" --help
           mkdir -p output
           java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}" transpile examples/HelloWorld0.expresso --out output --verbose
@@ -119,20 +118,24 @@ jobs:
       - name: Write Debian maintainer scripts (symlink in PATH)
         shell: bash
         run: |
+          set -euo pipefail
           mkdir -p packaging
 
+          # postinst
           cat > packaging/postinst <<'EOF'
           #!/bin/sh
+          set -e
           ln -sf /opt/"${APP_NAME}"/bin/"${APP_NAME}" /usr/local/bin/"${APP_NAME}"
           exit 0
           EOF
 
+          # postrm
           cat > packaging/postrm <<'EOF'
-          # packaging/postrm
           #!/bin/sh
+          set -e
           rm -f /usr/local/bin/"${APP_NAME}"
           exit 0
-
+          EOF
 
           chmod 755 packaging/postinst packaging/postrm
 
@@ -208,48 +211,11 @@ jobs:
           path: dist/*.msi
           if-no-files-found: error
 
-  docker-image:
-    needs: [build-jar, Create-cli-Release]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download built JAR
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
-
-      - name: Build Docker image
-        run: |
-          mkdir -p docker/artifact
-          mv "${{ env.APP_NAME }}-${{ env.VERSION }}.jar" docker/artifact/expresso.jar
-          docker build -t expressor:latest \
-            -f dockerfile \
-            docker
-      - name: Run Docker image (test)
-        run: |
-          docker run expressor:latest
-          wget -qO- http://localhost:8080/health
-
-      - name: upload Docker image to Docker Hub
-        if: needs.build-jar.outputs.dockerhub_available == 'true'
-        uses: docker/build-push-action@v4
-        with:
-          context: ./docker
-          file: ./docker/dockerfile
-          push: true
-          tags: antonyOviedo/expressor:${{ env.VERSION }}
-        env:
-          DOCKER_HUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-
-
   Create-cli-Release:
     runs-on: ubuntu-latest
     needs:
       - cli-installer-deb
       - cli-installer-msi
-
     steps:
       - uses: actions/checkout@v4
 
