--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -211,11 +211,59 @@ jobs:
           path: dist/*.msi
           if-no-files-found: error
 
+  cli-installer-exe:
+    needs: build-jar
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Temurin JDK 24
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '24'
+
+      - name: Install WiX
+        shell: powershell
+        run: choco install wixtoolset -y
+
+      - name: Download JARs
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
+          path: target
+
+      - name: jpackage -> EXE
+        shell: powershell
+        run: |
+          New-Item -ItemType Directory -Force -Path dist | Out-Null
+          jpackage `
+            --type exe `
+            --name "$env:APP_NAME" `
+            --input target `
+            --main-jar "${{ needs.build-jar.outputs.cli_jar_name }}" `
+            --main-class "$env:MAIN_CLASS" `
+            --dest dist `
+            --app-version "$env:VERSION" `
+            --vendor "Expresso Team" `
+            --win-console `
+            --win-menu `
+            --win-menu-group "Expresso" `
+            --win-dir-chooser
+
+      - name: Upload .exe
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
+          path: dist/*.exe
+          if-no-files-found: error
+
   Create-cli-Release:
     runs-on: ubuntu-latest
     needs:
       - cli-installer-deb
       - cli-installer-msi
+      - cli-installer-exe
     steps:
       - uses: actions/checkout@v4
 
@@ -223,19 +271,112 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
-          path: artifacts
+          path: artifacts/cli
+
+      - name: Download REST JAR
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
+          path: artifacts/rest
 
       - name: Download .deb
         uses: actions/download-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}.deb"
-          path: artifacts
+          path: artifacts/deb
 
       - name: Download .msi
         uses: actions/download-artifact@v4
         with:
           name: ${{ env.APP_NAME }}-${{ env.VERSION }}.msi
-          path: artifacts
+          path: artifacts/msi
+
+      - name: Download .exe
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
+          path: artifacts/exe
+
+      - name: Smoke test CLI JAR
+        shell: bash
+        run: |
+          set -euo pipefail
+          CLI_JAR=$(find artifacts/cli -maxdepth 1 -name '*.jar' -print -quit)
+          if [ -z "$CLI_JAR" ]; then
+            echo "CLI jar not found" >&2
+            exit 1
+          fi
+          mkdir -p smoke-output
+          java -jar "$CLI_JAR" --help >/tmp/cli-help.txt
+          java -jar "$CLI_JAR" transpile examples/HelloWorld0.expresso --out smoke-output --verbose
+
+      - name: Validate Debian package
+        shell: bash
+        run: |
+          set -euo pipefail
+          DEB_FILE=$(find artifacts/deb -maxdepth 1 -name '*.deb' -print -quit)
+          if [ -z "$DEB_FILE" ]; then
+            echo "Debian package not found" >&2
+            exit 1
+          fi
+          dpkg-deb --info "$DEB_FILE"
+          dpkg-deb --contents "$DEB_FILE" | grep -E "/usr/local/bin/${APP_NAME}$"
+
+      - name: Inspect Windows installers
+        shell: bash
+        run: |
+          set -euo pipefail
+          sudo apt-get update
+          sudo apt-get install -y p7zip-full msitools
+          shopt -s nullglob
+          for artifact in artifacts/msi/*.msi artifacts/exe/*.exe; do
+            echo "::group::Testing $artifact"
+            file "$artifact"
+            case "$artifact" in
+              *.msi)
+                TMP_DIR=$(mktemp -d)
+                msiextract --directory "$TMP_DIR" "$artifact"
+                find "$TMP_DIR" -maxdepth 1 -type f | head
+                rm -rf "$TMP_DIR"
+                ;;
+              *.exe)
+                7z t "$artifact"
+                ;;
+            esac
+            echo "::endgroup::"
+          done
+
+      - name: Prepare REST JAR for Docker image
+        shell: bash
+        run: |
+          set -euo pipefail
+          REST_JAR=$(find artifacts/rest -maxdepth 1 -name '*.jar' -print -quit)
+          if [ -z "$REST_JAR" ]; then
+            echo "REST jar not found" >&2
+            exit 1
+          fi
+          mkdir -p expresso-rest/target
+          cp "$REST_JAR" expresso-rest/target/
+
+      - name: Build REST Docker image
+        run: docker build -f dockerfile -t ${{ env.APP_NAME }}-rest:${{ env.VERSION }} .
+
+      - name: Smoke test REST Docker image
+        shell: bash
+        run: |
+          set -euo pipefail
+          IMAGE_NAME="${APP_NAME}-rest:${VERSION}"
+          CONTAINER_NAME="rest-smoke-test"
+          docker run --rm -d --name "$CONTAINER_NAME" "$IMAGE_NAME"
+          cleanup() {
+            docker logs "$CONTAINER_NAME" || true
+            docker stop "$CONTAINER_NAME" >/dev/null 2>&1 || true
+          }
+          trap cleanup EXIT
+          sleep 10
+          docker logs "$CONTAINER_NAME" | tail -n 50
+          docker stop "$CONTAINER_NAME"
+          trap - EXIT
 
       - name: Create GitHub Release + upload assets
         id: gh_release
@@ -246,9 +387,10 @@ jobs:
           name: "${{ env.APP_NAME }} v${{ env.VERSION }}"
           generate_release_notes: true
           files: |
-            artifacts/*.jar
-            artifacts/*.deb
-            artifacts/*.msi
+            artifacts/cli/*.jar
+            artifacts/deb/*.deb
+            artifacts/msi/*.msi
+            artifacts/exe/*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
@@ -288,3 +430,5 @@ jobs:
             ${{ env.APP_NAME }}-${{ env.VERSION }}.jar
             ${{ env.APP_NAME }}-${{ env.VERSION }}.deb
             ${{ env.APP_NAME }}-${{ env.VERSION }}.msi
+            ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
+            ${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar
