--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   build-jar:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     outputs:
       cli_jar_name: ${{ steps.pick.outputs.cli_jar_name }}
       rest_jar_name: ${{ steps.pick.outputs.rest_jar_name }}
@@ -69,15 +69,6 @@ jobs:
           echo "cli_jar_name=$(basename "$CLI_JAR")" >> "$GITHUB_OUTPUT"
           echo "rest_jar_name=$(basename "$REST_JAR")" >> "$GITHUB_OUTPUT"
 
-      - name: Test JAR
-        run: |
-          echo "Testing ${{ steps.pick.outputs.cli_jar_name }}"
-          java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}" --help
-          mkdir -p output
-          java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}" transpile examples/HelloWorld0.expresso --out output --verbose
-          java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}" build examples/HelloWorld0.expresso --out output --verbose
-          java -jar "expresso-cli/target/${{ steps.pick.outputs.cli_jar_name }}" run examples/HelloWorld0.expresso --out output --verbose
-
       - name: Upload Cli Jar
         uses: actions/upload-artifact@v4
         with:
@@ -91,54 +82,148 @@ jobs:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
           path: "expresso-rest/target/${{ steps.pick.outputs.rest_jar_name }}"
           if-no-files-found: error
-
-  cli-installer-deb:
+  
+  test-cli-jar:
     needs: build-jar
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Temurin JDK 24
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '24'
-
-      - name: Install jpackage deps (deb)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y fakeroot dpkg-dev binutils file
-
-      - name: Download JARs
+      - name: Download CLI JAR
         uses: actions/download-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
           path: target
 
+      - name: Smoke test CLI JAR
+        run: |
+          set -euo pipefail
+          CLI_JAR=$(find target -maxdepth 1 -name '*.jar' -print -quit)
+          echo "Testing $CLI_JAR"
+          java -jar "$CLI_JAR" --help
+          mkdir -p output
+          java -jar "$CLI_JAR" transpile examples/HelloWorld0.expresso --out output --verbose
+          java -jar "$CLI_JAR" build examples/HelloWorld0.expresso --out output --verbose
+          java -jar "$CLI_JAR" run examples/HelloWorld0.expresso --out output --verbose
+
+  test-rest-jar:
+    needs: build-jar
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download REST JAR
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
+          path: target
+
+      - name: Validate REST health endpoint
+        run: |
+          set -euo pipefail
+          REST_JAR=$(find target -maxdepth 1 -name '*.jar' -print -quit)
+          echo "Launching $REST_JAR"
+          export SERVER_PORT=8081
+          java -jar "$REST_JAR" >/tmp/rest.log 2>&1 &
+          PID=$!
+          cleanup() {
+            kill $PID >/dev/null 2>&1 || true
+            wait $PID 2>/dev/null || true
+            tail -n 100 /tmp/rest.log || true
+          }
+          trap cleanup EXIT
+          for _ in $(seq 1 30); do
+            if curl -sSf "http://127.0.0.1:${SERVER_PORT}/api/v1/health" | grep -q 'ok'; then
+              echo "REST healthcheck passed"
+              exit 0
+            fi
+            sleep 2
+          done
+          echo "REST API did not become healthy" >&2
+          exit 1
+
+  test-docker-image:
+    needs: build-jar
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download REST JAR
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
+          path: artifacts
+
+      - name: Build Docker image
+        run: |
+          set -euo pipefail
+          REST_JAR=$(find artifacts -maxdepth 1 -name '*.jar' -print -quit)
+          if [ -z "$REST_JAR" ]; then
+            echo "Rest jar not found" >&2
+            exit 1
+          fi
+          mkdir -p expresso-rest/target
+          cp "$REST_JAR" expresso-rest/target/
+          docker build -f dockerfile -t ${{ env.APP_NAME }}-rest:${{ env.VERSION }} .
+
+      - name: Smoke test Docker image
+        run: |
+          set -euo pipefail
+          IMAGE="${APP_NAME}-rest:${VERSION}"
+          CONTAINER="rest-smoke-${GITHUB_RUN_NUMBER}"
+          docker run --rm -d --name "$CONTAINER" -e SERVER_PORT=8082 -p 8082:8082 "$IMAGE"
+          cleanup() {
+            docker logs "$CONTAINER" || true
+            docker stop "$CONTAINER" >/dev/null 2>&1 || true
+          }
+          trap cleanup EXIT
+          for _ in $(seq 1 30); do
+            if curl -sSf http://127.0.0.1:8082/api/v1/health | grep -q 'ok'; then
+              echo "Dockerized REST healthcheck passed"
+              exit 0
+            fi
+            sleep 2
+          done
+          echo "Dockerized REST API failed healthcheck" >&2
+          exit 1
+
+  cli-installer-deb:
+    needs: build-jar
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Temurin JDK 24
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '24'
+      - name: Install jpackage deps (deb)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y fakeroot dpkg-dev binutils file
+      - name: Download JARs
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
+          path: target
       - name: Write Debian maintainer scripts (symlink in PATH)
         shell: bash
         run: |
           set -euo pipefail
           mkdir -p packaging
-
-          # postinst
           cat > packaging/postinst <<'EOF'
           #!/bin/sh
           set -e
           ln -sf /opt/"${APP_NAME}"/bin/"${APP_NAME}" /usr/local/bin/"${APP_NAME}"
           exit 0
           EOF
-
-          # postrm
           cat > packaging/postrm <<'EOF'
           #!/bin/sh
           set -e
           rm -f /usr/local/bin/"${APP_NAME}"
           exit 0
           EOF
-
           chmod 755 packaging/postinst packaging/postrm
-
       - name: jpackage -> .deb (CLI only)
         shell: bash
         run: |
@@ -156,36 +241,54 @@ jobs:
             --resource-dir packaging \
             --dest dist \
             --verbose
-
       - name: Upload .deb artifact
         uses: actions/upload-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}.deb"
           path: dist/*.deb
           if-no-files-found: error
+
+  test-deb:
+    needs: cli-installer-deb
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download .deb
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.deb"
+          path: artifacts
+
+      - name: Inspect and install Debian package
+        run: |
+          set -euo pipefail
+          DEB_FILE=$(find artifacts -maxdepth 1 -name '*.deb' -print -quit)
+          echo "Inspecting $DEB_FILE"
+          dpkg-deb --info "$DEB_FILE"
+          dpkg-deb --contents "$DEB_FILE" | grep -E "/usr/local/bin/${APP_NAME}$"
+          sudo dpkg -i "$DEB_FILE"
+          /usr/local/bin/"${APP_NAME}" --help
+          sudo dpkg -r "${APP_NAME}"
   
   cli-installer-msi:
     needs: build-jar
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Temurin JDK 24
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '24'
-
       - name: Install WiX
         shell: powershell
         run: choco install wixtoolset -y
-
       - name: Download JARs
         uses: actions/download-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
           path: target
-
       - name: jpackage -> MSI
         shell: powershell
         run: |
@@ -203,7 +306,6 @@ jobs:
             --win-menu `
             --win-menu-group "Expresso" `
             --win-dir-chooser
-
       - name: Upload .msi
         uses: actions/upload-artifact@v4
         with:
@@ -211,28 +313,47 @@ jobs:
           path: dist/*.msi
           if-no-files-found: error
 
+  test-msi:
+    needs: cli-installer-msi
+    runs-on: windows-latest
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ env.APP_NAME }}-${{ env.VERSION }}.msi
+          path: artifacts
+
+      - name: Install MSI and run CLI
+        shell: powershell
+        run: |
+          $msi = Get-ChildItem -Path artifacts -Filter *.msi | Select-Object -First 1
+          if(-not $msi){ throw "MSI not found" }
+          Write-Host "Installing $($msi.FullName)"
+          Start-Process -FilePath msiexec.exe -ArgumentList '/i', $msi.FullName, '/qn', '/norestart' -Wait -NoNewWindow
+          $cliPath = "C:\Program Files\${env:APP_NAME}\bin\${env:APP_NAME}.exe"
+          if(-not (Test-Path $cliPath)){
+            throw "CLI executable not found at $cliPath"
+          }
+          & $cliPath --help
+          Start-Process -FilePath msiexec.exe -ArgumentList '/x', $msi.FullName, '/qn', '/norestart' -Wait -NoNewWindow
+
   cli-installer-exe:
     needs: build-jar
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Temurin JDK 24
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '24'
-
       - name: Install WiX
         shell: powershell
         run: choco install wixtoolset -y
-
       - name: Download JARs
         uses: actions/download-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
           path: target
-
       - name: jpackage -> EXE
         shell: powershell
         run: |
@@ -250,7 +371,6 @@ jobs:
             --win-menu `
             --win-menu-group "Expresso" `
             --win-dir-chooser
-
       - name: Upload .exe
         uses: actions/upload-artifact@v4
         with:
@@ -258,12 +378,41 @@ jobs:
           path: dist/*.exe
           if-no-files-found: error
 
+  test-exe:
+    needs: cli-installer-exe
+    runs-on: windows-latest
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
+          path: artifacts
+
+      - name: Install EXE and run CLI
+        shell: powershell
+        run: |
+          $exe = Get-ChildItem -Path artifacts -Filter *.exe | Select-Object -First 1
+          if(-not $exe){ throw "EXE not found" }
+          Write-Host "Installing via $($exe.FullName)"
+          Start-Process -FilePath $exe.FullName -ArgumentList '/install', '/quiet', '/norestart' -Wait -NoNewWindow
+          $cliPath = "C:\Program Files\${env:APP_NAME}\bin\${env:APP_NAME}.exe"
+          if(-not (Test-Path $cliPath)){
+            throw "CLI executable not found at $cliPath"
+          }
+          & $cliPath --help
+          Start-Process -FilePath $exe.FullName -ArgumentList '/uninstall', '/quiet', '/norestart' -Wait -NoNewWindow
+
   Create-cli-Release:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs:
       - cli-installer-deb
       - cli-installer-msi
       - cli-installer-exe
+      - test-cli-jar
+      - test-rest-jar
+      - test-deb
+      - test-msi
+      - test-exe
+      - test-docker-image
     steps:
       - uses: actions/checkout@v4
 
@@ -297,56 +446,7 @@ jobs:
           name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
           path: artifacts/exe
 
-      - name: Smoke test CLI JAR
-        shell: bash
-        run: |
-          set -euo pipefail
-          CLI_JAR=$(find artifacts/cli -maxdepth 1 -name '*.jar' -print -quit)
-          if [ -z "$CLI_JAR" ]; then
-            echo "CLI jar not found" >&2
-            exit 1
-          fi
-          mkdir -p smoke-output
-          java -jar "$CLI_JAR" --help >/tmp/cli-help.txt
-          java -jar "$CLI_JAR" transpile examples/HelloWorld0.expresso --out smoke-output --verbose
-
-      - name: Validate Debian package
-        shell: bash
-        run: |
-          set -euo pipefail
-          DEB_FILE=$(find artifacts/deb -maxdepth 1 -name '*.deb' -print -quit)
-          if [ -z "$DEB_FILE" ]; then
-            echo "Debian package not found" >&2
-            exit 1
-          fi
-          dpkg-deb --info "$DEB_FILE"
-          dpkg-deb --contents "$DEB_FILE" | grep -E "/usr/local/bin/${APP_NAME}$"
-
-      - name: Inspect Windows installers
-        shell: bash
-        run: |
-          set -euo pipefail
-          sudo apt-get update
-          sudo apt-get install -y p7zip-full msitools
-          shopt -s nullglob
-          for artifact in artifacts/msi/*.msi artifacts/exe/*.exe; do
-            echo "::group::Testing $artifact"
-            file "$artifact"
-            case "$artifact" in
-              *.msi)
-                TMP_DIR=$(mktemp -d)
-                msiextract --directory "$TMP_DIR" "$artifact"
-                find "$TMP_DIR" -maxdepth 1 -type f | head
-                rm -rf "$TMP_DIR"
-                ;;
-              *.exe)
-                7z t "$artifact"
-                ;;
-            esac
-            echo "::endgroup::"
-          done
-
-      - name: Prepare REST JAR for Docker image
+      - name: Stage REST JAR for release image
         shell: bash
         run: |
           set -euo pipefail
@@ -358,25 +458,34 @@ jobs:
           mkdir -p expresso-rest/target
           cp "$REST_JAR" expresso-rest/target/
 
-      - name: Build REST Docker image
+      - name: Build REST Docker image (release copy)
         run: docker build -f dockerfile -t ${{ env.APP_NAME }}-rest:${{ env.VERSION }} .
 
-      - name: Smoke test REST Docker image
+      # --- NEW: Push image to Docker Hub when creds are present ---
+      - name: Docker Hub login
+        if: needs.build-jar.outputs.dockerhub_available == 'true'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push REST image to Docker Hub
+        if: needs.build-jar.outputs.dockerhub_available == 'true'
         shell: bash
         run: |
           set -euo pipefail
-          IMAGE_NAME="${APP_NAME}-rest:${VERSION}"
-          CONTAINER_NAME="rest-smoke-test"
-          docker run --rm -d --name "$CONTAINER_NAME" "$IMAGE_NAME"
-          cleanup() {
-            docker logs "$CONTAINER_NAME" || true
-            docker stop "$CONTAINER_NAME" >/dev/null 2>&1 || true
-          }
-          trap cleanup EXIT
-          sleep 10
-          docker logs "$CONTAINER_NAME" | tail -n 50
-          docker stop "$CONTAINER_NAME"
-          trap - EXIT
+          LOCAL="${APP_NAME}-rest:${VERSION}"
+          REPO="${{ secrets.DOCKERHUB_USERNAME }}/${APP_NAME}-rest"
+          SHORT_SHA="${GITHUB_SHA::7}"
+
+          docker tag "$LOCAL" "$REPO:${VERSION}"
+          docker tag "$LOCAL" "$REPO:latest"
+          docker tag "$LOCAL" "$REPO:${SHORT_SHA}"
+
+          docker push "$REPO:${VERSION}"
+          docker push "$REPO:latest"
+          docker push "$REPO:${SHORT_SHA}"
+      # --- END NEW ---
 
       - name: Create GitHub Release + upload assets
         id: gh_release
