--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -406,7 +406,7 @@ jobs:
     needs:
       - cli-installer-deb
       - cli-installer-msi
-      - cli-installer-exe
+      - cli-portable-exe
       - test-cli-jar
       - test-rest-jar
       - test-deb
