Fix application name from 'expressor' to 'expresso' and update version to 3.2 in CLI tool

--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -7,7 +7,7 @@ on:
       - completed
 
 env:
-  APP_NAME: expressor
+  APP_NAME: expresso
   MAIN_CLASS: com.diezam04.expresso.adapters.cli.Cli
   VERSION: 3.1
 
