--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 env:
-  APP_NAME: expressor
+  APP_NAME: expresso
   MAIN_CLASS: com.diezam04.expresso.adapters.cli.Cli
   VERSION: 3.2
 
@@ -250,7 +250,7 @@ jobs:
             --input target \
             --main-jar "${{ needs.build-jar.outputs.cli_jar_name }}" \
             --main-class "${MAIN_CLASS}" \
-            --app-version 1.1 \
+            --app-version "${VERSION}" \
             --linux-deb-maintainer "Expresso Team <antony-08@hotmail.com>" \
             --resource-dir packaging \
             --dest dist \
@@ -456,6 +456,16 @@ jobs:
           name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
           path: artifacts/exe
 
+      - name: Normalize artifact names
+        shell: bash
+        run: |
+          set -euo pipefail
+          mkdir -p release
+          cp artifacts/cli/*.jar "release/${APP_NAME}-${VERSION}.jar"
+          cp artifacts/deb/*.deb "release/${APP_NAME}-${VERSION}.deb"
+          cp artifacts/msi/*.msi "release/${APP_NAME}-${VERSION}.msi"
+          cp artifacts/exe/*.exe "release/${APP_NAME}-${VERSION}.exe"
+
       - name: Stage REST JAR for release image
         shell: bash
         run: |
@@ -506,10 +516,10 @@ jobs:
           name: "${{ env.APP_NAME }} v${{ env.VERSION }}"
           generate_release_notes: true
           files: |
-            artifacts/cli/*.jar
-            artifacts/deb/*.deb
-            artifacts/msi/*.msi
-            artifacts/exe/*.exe
+            release/*.jar
+            release/*.deb
+            release/*.msi
+            release/*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
